--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Thermometer</string>
     <string name="temperature">Temperature</string>
     <string name="humidity">Humidity</string>
-    <string name="stats">Stats</string>
+    <string name="charts">Charts</string>
 </resources>
